packages/react-components/src/action-form/fields/BaseInput.module.css
/*
 * Copyright 2026 Palantir Technologies, Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.osdkBaseInput {
  display: block;
  width: 100%;
  min-height: var(--osdk-input-min-height);
  padding: var(--osdk-input-padding);
  border-radius: var(--osdk-input-border-radius);
  border: none;
  box-shadow: var(--osdk-input-shadow);
  background-color: var(--osdk-input-bg);
  color: var(--osdk-input-color);
  font-family: var(--osdk-input-font-family);
  font-size: var(--osdk-input-font-size);
  line-height: var(
    --osdk-input-line-height,
    var(--osdk-typography-line-height-default)
  );
  box-sizing: border-box;
  transition:
    background-color var(--osdk-input-transition-duration)
      var(--osdk-input-transition-ease),
    box-shadow var(--osdk-input-transition-duration)
      var(--osdk-input-transition-ease);

  &::placeholder {
    color: var(--osdk-input-placeholder-color);
  }

  &:hover {
    background-color: var(--osdk-input-bg-hover);
  }

  &:focus-visible {
    outline: var(--osdk-input-focus-outline);
    outline-offset: var(--osdk-input-focus-outline-offset, 0px);
    box-shadow: var(--osdk-input-focus-shadow);
  }

  &:disabled {
    cursor: not-allowed;
    opacity: var(--osdk-input-disabled-opacity);
  }

  &[aria-invalid] {
    box-shadow: var(--osdk-input-shadow-error);
  }

  &[aria-invalid]:focus-visible {
    box-shadow: var(--osdk-input-focus-shadow-error);
  }
}

